[package]
name = "circuit_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = { package = "bellman_ce", git = "https://github.com/thomas-nguy/bellman", branch = "thomas/print", features = ["multicore"] }
# bellman = { package = "bellman_ce", path = "../bellman", features = ["multicore"] }
